=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.1
 - Fixed: [ 2350355 ] PGV 4.1.6 "Printer-friendly version" (wooc)
 - Fixed: [ 2556175 ] Error 2 w Edit geographic place locations (wooc)
 - Fixed: [ 2555840 ] Interactive Tree doesn't work when living names hidden (canajun2eh)
 - Fixed: [ 2555574 ] Interactive Tree incorrect text spacing inside box (canajun2eh)
 - Added: Preparatory work to enable config option to turn on/off each Tab Navigator on Indi page (windmillway)
 - Fixed: [ 2555579 ] Interactive Tree box disappears when clicked (wooc)
 - Fixed: [ 2329962 ] autocomplete css (wooc)
 - Fixed: [ 2555011 ] Quick Update fails with suffix on name (wooc)
 - Fixed: [ 2554221 ] 4.2 Interactive tree shown for user and not the individual (canajun2eh)
 - Fixed: [ 1969541 ] 4.1.5 Quick Update:  Address gets concatenated (wooc)
 - Fixed: [ 1803282 ] [4.1.2] Adding OCCU in Quick Update wont work (wooc)

Version 4.2.0 2009-01-31
 - Added: GEDCOM config option to control Index or Portal page showing after Login (canajun2eh)
 - Fixed: [ 2544257 ] [4942] Show stat's charts ERROR 8's (wooc)
 - Changed: Reduced size of (Fxx) text in Navigator (windmillway)
 - Fixed: [ 2543891 ] Need to refresh to see approved changes (wooc)
 - Fixed: [ 2542150 ] [4927] Cannot add date to MARR when SOUR is present (wooc)
 - Fixed: [ 2536206 ] [4.1.6] Double Date Field on Census Re-edit (wooc)
 - Added: Quick Parents/Step/Immediate Family Page Link on Indi Page Family Navigator (windmillway)
 - Fixed: [ 2524544 ] AddFavourites() not working (canajun2eh)
 - Fixed: [ 2391927 ] Ahnentafel report crashes (ljm)
 - Changed: [ 2534555 ] Modify 'Prefer fact sources' option (canajun2eh)
 - Changed: [ 2481763 ] Change options that control the use of Quick Update (canajun2eh)