@@ -10,6 +10,7 @@
 
 
 Version 4.2.1
+ - Fixed: [ 2477810 ] Media Title Not Displaying on mediaviewer.php (canajun2eh)
  - Fixed: [ 2350355 ] PGV 4.1.6 "Printer-friendly version" (wooc)
  - Fixed: [ 2556175 ] Error 2 w Edit geographic place locations (wooc)
  - Fixed: [ 2555840 ] Interactive Tree doesn't work when living names hidden (canajun2eh)
